# docs/apifox-openapi.json
@@ -4548,6 +4548,19 @@
             "minLength": 1,
             "title": "Message",
             "type": "string"
+          },
+          "selected_choice": {
+            "anyOf": [
+              {
+                "maxLength": 4000,
+                "minLength": 1,
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Selected Choice"
           }
         },
         "required": [
